Re-run of code generation; working copy schema. Huge merge. (See ome-xml:r635)